knowledge-iac/terraform-aws/alb_sg.tf
#AWS Security Group
resource "aws_security_group" "alb_sg" {
  name   = "knowledge-alb-sg"
  vpc_id = aws_default_vpc.default_vpc.id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
