knowledge-iac/terraform-aws/ecs_sg.tf
resource "aws_security_group" "ecs_sg" {
  name   = "knowledge-ecs-sg"
  vpc_id = aws_default_vpc.default_vpc.id

  ingress {
    from_port       = 8080
    to_port         = 8080
    protocol        = "tcp"
    security_groups = [aws_security_group.alb_sg.id]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
